--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -8,6 +8,9 @@
   --textLight: #efefef;
   --fontPrimary: Verdana, Geneva, Tahoma, sans-serif;
   --shadow: 2px 2px 5px rgb(61, 61, 61);
+  /* Uniform Zoom Effect */
+  --zoomTransform: scale(1.025);
+  --zoomTransition: 0.2s ease;
 }
 
 body {
@@ -29,9 +32,6 @@ body {
   padding: 2rem 0;
 }
 
-#banner {
-}
-
 #logo {
   height: 25vw;
   max-height: 150px;
@@ -43,12 +43,13 @@ body {
   width: 50vw;
   max-width: 350px;
   box-shadow: var(--shadow);
-  transition: 0.2s ease;
+  transition: var(--zoomTransition);
 }
 
-#coverImg:hover {
-  transform: scale(1.05);
-  transition: 0.2s ease;
+#coverImg:hover,
+#ctrlBackground:hover {
+  transform: var(--zoomTransform);
+  transition: var(--zoomTransition);
 }
 
 /* ------------------  Start Button ------------------*/
@@ -61,38 +62,59 @@ body {
   height: 3rem;
   margin: 5rem auto;
   color: var(--lightText);
-  transition: transform 0.5s ease;
+  transition: var(--zoomTransition);
   box-shadow: var(--shadow);
 }
 
 #startButton:hover {
   text-decoration: none;
   cursor: pointer;
-  transform: scale(1.05);
-  transition: 0.2s ease;
+  transform: var(--zoomTransform);
+  transition: var(--zoomTransition);
 }
 
 #startButtonText {
   line-height: 3rem;
   font-size: 1.25rem;
 }
+/* --------------------------------------------------*/
 
 #description {
   height: 20rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
 }
 
 #controls {
   height: 25rem;
   color: var(--textDark);
+  text-align: center;
 }
 
 #ctrlBackground {
-  height: 20rem;
-  width: 80%;
+  display: flex;
+  flex-direction: column;
+  width: 85%;
+  height: 100%;
   margin: 0 auto;
   background-color: var(--textLight);
   border-radius: 1rem;
+  transition: var(--zoomTransition);
   box-shadow: var(--shadow);
+}
+
+.ctrlSection {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+  flex-grow: 1;
+}
+
+.control {
+  padding: 1.15rem;
 }
 
 .keys {
@@ -112,6 +134,10 @@ body {
 
 @media (min-width: 600px) {
   #coverImg {
-    width: ;
+    width: 340px;
+  }
+
+  #controls {
+    height: 20rem;
   }
 }
