--- a/public/styles/game.css
+++ b/public/styles/game.css
@@ -7,9 +7,11 @@
   border-radius: 3px;
   height: 1040px;
   width: 800px;
-  margin: 0 auto 1rem auto;
+  margin: 0 auto 3rem auto;
 }
 
 .button {
+  height: 3rem;
+  width: 7rem;
   margin: 1rem;
 }
